--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@
 	<meta charset="utf-8">
 	<title>Neighborhood Map</title>
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="catstyler.css">
-	-->
+	<link rel="stylesheet" type="text/css" href="css/styler.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 </head>
 <body>
 <!-- View -->
+	<h1>Neighborhood Map</h1>
+ <div id="map"></div>
+    <script type="text/javascript">
+		var map;
+		function initMap() {
+		  map = new google.maps.Map(document.getElementById('map'), {
+		    center: {lat: -34.397, lng: 150.644},
+		    zoom: 8
+		  });
+		}
+    </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCK7bPNnrY4lFEljZqNNSU7kkJlznZCSsQ&callback=initMap">
+    </script>
 
 	<script type='text/javascript' src='js/knockout-3.3.0.js'></script>
 	<script type="text/javascript" src="js/app.js"></script>
