--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
 <body>
 <!-- View -->
 	<h1>Neighborhood Map</h1>
+<div id="list">
+	<h2>List of Places</h2>
+	<ul>
+		<li>Fair Haven, NJ</li>
+		<li>Little Silver, NJ</li>
+	</ul>
+</div>
+
  <div id="map"></div>
     <script type="text/javascript">
 		var map;
 		function initMap() {
 		  map = new google.maps.Map(document.getElementById('map'), {
-		    center: {lat: -34.397, lng: 150.644},
-		    zoom: 8
+		    center: {lat: 40.3619, lng: -74.0388},
+		    zoom: 12,
+		    mapTypeId: google.maps.MapTypeId.HYBRID
 		  });
 		}
     </script>
