added marker, created location data set of 2

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 		    zoom: 12,
 		    mapTypeId: google.maps.MapTypeId.HYBRID
 		  });
+
+		    var marker = new google.maps.Marker({
+			    position: {lat: 40.3619, lng: -74.0388},
+			    map: map,
+			    title: 'Hello World!'
+			});
 		}
     </script>
     <script async defer
