--- a/index.html
+++ b/index.html
@@ -12,31 +12,16 @@
 <body>
 <!-- View -->
 	<h1>Neighborhood Map</h1>
-<div id="list">
-	<h2>List of Places</h2>
-	<ul>
-		<li>Fair Haven, NJ</li>
-		<li>Little Silver, NJ</li>
-	</ul>
-</div>
+	<div id="list">
+		<h2 data-bind="foreach: markerArray">List of Places</h2>
+		<ul>
+			<li data-bind="text: name"></li>
+			<li>Little Silver, NJ</li>
+		</ul>
+	</div>
 
- <div id="map"></div>
-    <script type="text/javascript">
-		var map;
-		function initMap() {
-		  map = new google.maps.Map(document.getElementById('map'), {
-		    center: {lat: 40.3619, lng: -74.0388},
-		    zoom: 12,
-		    mapTypeId: google.maps.MapTypeId.HYBRID
-		  });
+	<div id="map"></div>
 
-		    var marker = new google.maps.Marker({
-			    position: {lat: 40.3619, lng: -74.0388},
-			    map: map,
-			    title: 'Hello World!'
-			});
-		}
-    </script>
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCK7bPNnrY4lFEljZqNNSU7kkJlznZCSsQ&callback=initMap">
     </script>
